--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Mohammed Innat
+name: Your Name
 
 # Short bio or description (displayed in the header)
-description: Machine Learning Engineer
+description: Web Developer from Somewhere
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-# avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
 
 #
 # Flags below are optional
@@ -18,16 +18,15 @@ description: Machine Learning Engineer
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: innat1994@gmail.com
-  facebook: iphoton.2k14
+  email:
+  facebook:
   flickr:
-  github: 
-  instagram: innat_2k14/
-  linkedin: innat2k14
+  github: barryclark/jekyll-now
+  instagram:
+  linkedin:
   pinterest:
-  twitter: innat_2k14
   rss: # just type anything here for a working RSS icon
-  
+  twitter: jekyllrb
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
@@ -48,7 +47,7 @@ url:
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/innat.github.io"
+baseurl: ""
 
 #
 # !! You don't need to change any of the configuration flags below !!
@@ -59,17 +58,12 @@ permalink: /:title/
 # The release of Jekyll Now that you're using
 version: v1.2.0
 
-theme: minima
-
 # Jekyll 3 now only supports Kramdown for Markdown
 kramdown:
   # Use GitHub flavored markdown, including triple backtick fenced code blocks
   input: GFM
-  
-  auto_ids: true
-  
   # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
-  syntax_highlighter: rouge #pygments 
+  syntax_highlighter: rouge
   syntax_highlighter_opts:
     # Use existing pygments syntax highlighting css
     css_class: 'highlight'
@@ -82,7 +76,6 @@ sass:
 gems:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
-  - jekyll-jupyter-notebook
 
 # Exclude these files from your production _site
 exclude:
@@ -91,8 +84,3 @@ exclude:
   - LICENSE
   - README.md
   - CNAME
-
-# add for github emoji support
-gems:
-  - jemoji
-
