--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,8 @@ baseurl: ""
 
 permalink: /:title/
 
+theme: minima
+
 # The release of Jekyll Now that you're using
 version: v1.2.0
 
@@ -76,6 +78,7 @@ sass:
 gems:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
+  - jekyll-jupyter-notebook
 
 # Exclude these files from your production _site
 exclude:
@@ -84,3 +87,7 @@ exclude:
   - LICENSE
   - README.md
   - CNAME
+
+# add for github emoji support
+gems:
+  - jemoji
