--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Mohammed Innat
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Machine Learning Practitioner
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -21,7 +21,7 @@ footer-links:
   email: innat1994@gmail.com
   facebook:
   flickr:
-  github: 
+  github: innat
   instagram:
   linkedin: innat2k14
   pinterest:
